Firebase in configuration

--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,18 @@
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-firestore.js"></script>
-    <script src="../firestore.config.js"></script>
-    <script>
-      // Initialize Firebase
+    <!-- <script>
+      var firebaseConfig = {
+        apiKey: 'AIzaSyCmO0JAsTO83g3Io6kyvYVu3wEsiQ7oY98',
+        authDomain: 'coderki-app.firebaseapp.com',
+        databaseURL: 'https://coderki-app.firebaseio.com',
+        projectId: 'coderki-app',
+        storageBucket: 'coderki-app.appspot.com',
+        messagingSenderId: '801523551576',
+        appId: '1:801523551576:web:1fd3be0123da8430ef692d',
+      };
       firebase.initializeApp(firebaseConfig);
-    </script>
+    </script> -->
 
     <!-- customized font by coderki from Google Fonts -->
     <link
