--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <!-- The core Firebase JS SDK is always required and must be listed first
     <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-firestore.js"></script> -->
     <!-- <script>
       var firebaseConfig = {
         apiKey: 'AIzaSyCmO0JAsTO83g3Io6kyvYVu3wEsiQ7oY98',
